add static (#12)
